Fix navbar aligments

--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -1439,9 +1439,8 @@
                                             <action selector="deleteButtonAction:" destination="9Hr-VI-Dkc" eventType="touchUpInside" id="UYO-5F-6LW"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Delete Account" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S49-M8-bOY">
-                                        <rect key="frame" x="115" y="62" width="123" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Delete Account" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S49-M8-bOY">
+                                        <rect key="frame" x="126" y="62" width="123" height="21"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -1453,6 +1452,8 @@
                                     <constraint firstItem="VEy-im-QSO" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="YPY-n9-OyN" secondAttribute="leading" constant="20" symbolic="YES" id="4By-2d-oK9"/>
                                     <constraint firstAttribute="height" constant="94" id="B1g-eI-LjI"/>
                                     <constraint firstAttribute="bottom" secondItem="VEy-im-QSO" secondAttribute="bottom" constant="7" id="Kkb-gs-GrS"/>
+                                    <constraint firstItem="S49-M8-bOY" firstAttribute="centerX" secondItem="YPY-n9-OyN" secondAttribute="centerX" id="aWJ-eA-ypa"/>
+                                    <constraint firstAttribute="bottom" secondItem="S49-M8-bOY" secondAttribute="bottom" constant="11" id="twS-Cd-1Hv"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Delete account procedure" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KIf-g0-G67">
