--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -765,7 +765,7 @@
                                     <constraint firstAttribute="height" constant="58" id="w8Q-J2-N58"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zme-86-oZS" customClass="RoundedView" customModule="IPSX" customModuleProvider="target">
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zme-86-oZS" customClass="RoundedView" customModule="IPSX" customModuleProvider="target">
                                 <rect key="frame" x="16" y="195.66666666666666" width="343" height="65.999999999999972"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="garbage" translatesAutoresizingMaskIntoConstraints="NO" id="AUr-BZ-6BV">
