Update new screens to suppot localisation

--- a/IPSX/Flows/Dashboard/Storyboard/Base.lproj/TokenDeposit.storyboard
+++ b/IPSX/Flows/Dashboard/Storyboard/Base.lproj/TokenDeposit.storyboard
@@ -29,9 +29,8 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="81"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Deposits" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0cw-9l-YDU">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Deposits" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0cw-9l-YDU">
                                             <rect key="frame" x="15" y="46" width="75" height="22"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                             <color key="textColor" red="0.1647058824" green="0.1647058824" blue="0.1647058824" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
@@ -53,8 +52,10 @@
                                     </subviews>
                                     <color key="backgroundColor" red="0.97254901959999995" green="0.97254901959999995" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
+                                        <constraint firstItem="0cw-9l-YDU" firstAttribute="leading" secondItem="oWX-t0-8c5" secondAttribute="leading" constant="15" id="45d-63-zEm"/>
                                         <constraint firstItem="vkU-Q1-KyR" firstAttribute="leading" secondItem="oWX-t0-8c5" secondAttribute="leading" id="Ssf-s6-1KY"/>
                                         <constraint firstAttribute="trailing" secondItem="vkU-Q1-KyR" secondAttribute="trailing" id="VFE-sq-mEd"/>
+                                        <constraint firstItem="0cw-9l-YDU" firstAttribute="top" secondItem="oWX-t0-8c5" secondAttribute="top" constant="46" id="sXq-YC-RJ4"/>
                                         <constraint firstAttribute="bottom" secondItem="vkU-Q1-KyR" secondAttribute="bottom" id="uJt-6F-mZm"/>
                                     </constraints>
                                 </view>
