--- a/IPSX/Flows/Register/Storyboard/Base.lproj/Register.storyboard
+++ b/IPSX/Flows/Register/Storyboard/Base.lproj/Register.storyboard
@@ -21,8 +21,8 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="G34-ca-zlr">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="White list Registration" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OlJ-gJ-q0K">
-                                <rect key="frame" x="46" y="88" width="220" height="26.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Account Registration" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OlJ-gJ-q0K">
+                                <rect key="frame" x="46" y="88" width="211" height="27"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="26.5" id="1fh-TJ-fnp"/>
                                 </constraints>
