--- a/IPSX/Flows/Dashboard/Storyboard/Base.lproj/TokenDeposit.storyboard
+++ b/IPSX/Flows/Dashboard/Storyboard/Base.lproj/TokenDeposit.storyboard
@@ -552,7 +552,7 @@
                                     <constraint firstAttribute="bottom" secondItem="Oz6-Kc-bSN" secondAttribute="bottom" id="xz1-Wq-V0N"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="58" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="hfO-co-4CP">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="58" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="hfO-co-4CP">
                                 <rect key="frame" x="0.0" y="-536" width="375" height="603"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
@@ -1175,6 +1175,6 @@
         <image name="walletAccepted" width="32" height="32"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Tr8-7C-1cg"/>
+        <segue reference="5OV-46-10Z"/>
     </inferredMetricsTieBreakers>
 </document>
