Devtask #II-180 Update the logic for inactive proxies in dashboard

--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -273,8 +273,8 @@
                                             <constraint firstAttribute="height" constant="28" id="l2d-bw-eYe"/>
                                         </constraints>
                                         <segments>
-                                            <segment title="Available"/>
-                                            <segment title="Expired"/>
+                                            <segment title="Active"/>
+                                            <segment title="Inactive"/>
                                         </segments>
                                         <color key="tintColor" red="0.1647058824" green="0.67500001190000003" blue="0.87800002099999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
