Devtask #II-181 Refactor the webview to use urls from request model

--- a/IPSX/Flows/EnrolStaking/Storyboard/Base.lproj/EnrolStaking.storyboard
+++ b/IPSX/Flows/EnrolStaking/Storyboard/Base.lproj/EnrolStaking.storyboard
@@ -97,7 +97,7 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <segue destination="IHE-Si-r4Q" kind="presentation" id="oC6-FP-yJX"/>
+                                    <segue destination="IHE-Si-r4Q" kind="presentation" identifier="WebViewSegueID" id="oC6-FP-yJX"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YKu-qh-qq9" customClass="RoundedButton" customModule="IPSX" customModuleProvider="target">
@@ -634,7 +634,7 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <segue destination="IHE-Si-r4Q" kind="presentation" id="vGQ-Zb-a4J"/>
+                                    <segue destination="IHE-Si-r4Q" kind="presentation" identifier="WebViewSegueID" id="vGQ-Zb-a4J"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oXX-WC-jci">
