Implement delete account

--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -1542,7 +1542,6 @@
                             <constraint firstItem="FVZ-6U-SQI" firstAttribute="trailing" secondItem="YnK-Zt-ED0" secondAttribute="trailing" id="0ld-M6-lUB"/>
                             <constraint firstItem="YPY-n9-OyN" firstAttribute="leading" secondItem="FVZ-6U-SQI" secondAttribute="leading" id="0ut-lt-Qmq"/>
                             <constraint firstItem="FVZ-6U-SQI" firstAttribute="top" secondItem="YPY-n9-OyN" secondAttribute="top" constant="50" id="5Zv-mh-tMm"/>
-                            <constraint firstItem="KIf-g0-G67" firstAttribute="top" secondItem="YPY-n9-OyN" secondAttribute="bottom" constant="30" id="5pR-df-B0u"/>
                             <constraint firstItem="FVZ-6U-SQI" firstAttribute="trailing" secondItem="YPY-n9-OyN" secondAttribute="trailing" id="CDL-ji-Btw"/>
                             <constraint firstItem="ff4-3e-oRd" firstAttribute="centerX" secondItem="FVZ-6U-SQI" secondAttribute="centerX" id="IGZ-Sr-HBM"/>
                             <constraint firstItem="D2c-aM-PUz" firstAttribute="top" secondItem="YnK-Zt-ED0" secondAttribute="bottom" constant="20" id="IoX-I4-uHs"/>
@@ -1552,6 +1551,7 @@
                             <constraint firstItem="tKZ-zS-fY2" firstAttribute="top" secondItem="YPY-n9-OyN" secondAttribute="bottom" id="WSX-KF-OcL"/>
                             <constraint firstItem="ff4-3e-oRd" firstAttribute="centerY" secondItem="FVZ-6U-SQI" secondAttribute="centerY" id="ZZF-T9-sju"/>
                             <constraint firstItem="tKZ-zS-fY2" firstAttribute="leading" secondItem="FVZ-6U-SQI" secondAttribute="leading" id="bnl-cV-i7D"/>
+                            <constraint firstItem="KIf-g0-G67" firstAttribute="top" secondItem="tKZ-zS-fY2" secondAttribute="bottom" constant="29.333333333333329" id="dRG-qL-IaN"/>
                             <constraint firstItem="42h-Xt-MeB" firstAttribute="trailing" secondItem="KIf-g0-G67" secondAttribute="trailing" id="f9m-mp-5Fk"/>
                             <constraint firstItem="42h-Xt-MeB" firstAttribute="leading" secondItem="KIf-g0-G67" secondAttribute="leading" id="mG1-Yf-7Be"/>
                             <constraint firstItem="42h-Xt-MeB" firstAttribute="top" secondItem="KIf-g0-G67" secondAttribute="bottom" constant="4" id="oIq-tD-vuD"/>
