Done from Registration -> go to Landing

--- a/IPSX/Flows/Register/Storyboard/Base.lproj/Register.storyboard
+++ b/IPSX/Flows/Register/Storyboard/Base.lproj/Register.storyboard
@@ -475,7 +475,7 @@
                                             <color key="titleColor" red="0.16899999979999999" green="0.51372549019607838" blue="0.65499997139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                         <connections>
-                                            <segue destination="hd7-Xi-hGO" kind="show" identifier="LoginScreenSegueID" id="6Cf-44-TPQ"/>
+                                            <segue destination="hd7-Xi-hGO" kind="show" identifier="ShowLandingSegueID" id="6Cf-44-TPQ"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -523,10 +523,10 @@
             </objects>
             <point key="canvasLocation" x="4272.8000000000002" y="132.68365817091455"/>
         </scene>
-        <!--EmailLoginScreenID-->
+        <!--Landing-->
         <scene sceneID="28H-yz-Dgg">
             <objects>
-                <viewControllerPlaceholder storyboardName="Login" referencedIdentifier="EmailLoginScreenID" id="hd7-Xi-hGO" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="Landing" id="hd7-Xi-hGO" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ive-9c-LkZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4927" y="132"/>
