Fix login with another account from add wallet screen

--- a/IPSX/Flows/Register/Storyboard/Base.lproj/WalletAdd.storyboard
+++ b/IPSX/Flows/Register/Storyboard/Base.lproj/WalletAdd.storyboard
@@ -249,8 +249,7 @@
                         <outlet property="topConstraintOutlet" destination="QRs-td-EbI" id="X8D-hx-b9W"/>
                         <outlet property="walletNameRichTextField" destination="jgt-fi-HI3" id="QOn-oV-fFk"/>
                         <segue destination="fbu-vE-IPA" kind="show" identifier="showCongratsSegueID" id="7fb-nt-66U"/>
-                        <segue destination="rQA-9F-QWr" kind="unwind" identifier="showLoginSegueID" unwindAction="unwindToLoginOptionsWithSegue:" id="XUy-jX-QKa"/>
-                        <segue destination="rQA-9F-QWr" kind="unwind" identifier="UnwindToLandingID" unwindAction="unwindToLandingConstrollerWithSegue:" id="ZSD-bf-T8B"/>
+                        <segue destination="rQA-9F-QWr" kind="unwind" identifier="UnwindAndShowLandingID" unwindAction="unwindToTabBarAndShowLandingWithSegue:" id="mo5-DK-t5h"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dWr-33-kSH" userLabel="First Responder" sceneMemberID="firstResponder"/>
