UI updates needed for delete account flow

--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -843,6 +843,8 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Settings" image="Settings" id="Xkk-XY-EzG"/>
                     <connections>
+                        <outlet property="deleteButtonImageView" destination="AUr-BZ-6BV" id="JVD-AS-E2R"/>
+                        <outlet property="deleteButtonTextLabel" destination="bdW-4P-6m1" id="Spe-H2-PCJ"/>
                         <outlet property="emailNotificationsSwitch" destination="JU3-hU-DmW" id="AsC-4K-4Fu"/>
                         <outlet property="loadingView" destination="uwT-vm-HtC" id="8CL-It-HVo"/>
                         <outlet property="separatorView" destination="1BY-Us-4HP" id="C9g-Ev-TI8"/>
